--- a/templates/HomeMenuTeacher.html
+++ b/templates/HomeMenuTeacher.html
@@ -27,6 +27,7 @@
     display: grid;
     grid-template-columns: 40% 60%;
     grid-template-rows: auto;
+ 
 }
         .full-container{
             display: flex;
@@ -40,20 +41,22 @@
             border-radius: 12px;
             margin-bottom: 16px;
             display: grid;
-            grid-template-columns: 95% 5%;
+            grid-template-columns: 30% 30% 30% 10%;
             grid-template-rows: auto;
             align-content: center;
         }
         .menu_teacher_left {
-            grid-column-start: 1;
-            background-color: var(--white);
-            display: flex;
-            flex-direction: column;
-            border-radius: 12px;
-            margin-left: 4px;
-            margin-right: 16px;
-            align-items: stretch;
-            width: 50%;
+    grid-column-start: 1;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 500px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 500px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
 
         }
 
@@ -69,6 +72,7 @@
            margin-bottom: 16px;
            margin-left: 12px;
            text-align: left;
+           font-weight: unset;
         }
         .label{
             margin-left: 16px;
@@ -139,10 +143,11 @@ li{
 }
 
 .menu_teacher_right{
-    grid-column-start: 2;
+    grid-column-start: 3;
      display: flex;
      flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     width: auto;}
 .input{
             color: var(--blue);
@@ -161,7 +166,6 @@ li{
             font-size: var(--lg);
             background-color: var(--white);
             border-radius: 12px;
-            margin-bottom: 12px;
             margin-left: 8px;
             margin-right: 8px;
             border: none;
@@ -192,7 +196,7 @@ li{
         .log_out{
             width: 48px;
             height: 48px;
-            grid-column-start: 2;
+            grid-column-start: 4;
             align-self: center;
         }
     
@@ -203,10 +207,12 @@ li{
         justify-content: center;
     }
     .out{
+        grid-column-start: 4;
         display:flex;
         justify-content: center;
         align-items: center; 
         margin-right: 12px;
+        margin-right: 4px;
         
     }
     .exit{
@@ -257,12 +263,15 @@ li{
 
 
         }
-.gen-code{
-    width: auto;
-    font-size: var(--md);
-
-}
-
+.gen-code {width: auto;
+font-size: var(--md);}
+.custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
     </style>
 </head>
 <body>
@@ -280,17 +289,41 @@ li{
             {% endif %}
         {% endif %}
 
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         {% if message %}
             {% if message.strip() %}
                 <script>
-                    Swal.fire({
-                        title: "{{ message }}"
+                    document.addEventListener('DOMContentLoaded', (event) => {
+                        Swal.fire({
+                            title: "{{ message }}",
+                            showConfirmButton: true,
+                            confirmButtonText: 'OK',
+                            buttonsStyling: false,
+                            customClass: {
+                                confirmButton: 'custom-ok-button'
+                            }
+                        });
                     });
                 </script>
             {% endif %}
         {% endif %}
 <div class="nav-bar"><img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
-
+    <div class="menu_teacher_right">
+        <div class="menu-item">
+            <form action="/HomeMenuTeacher">
+                <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                <button  class= "primary-button-right" type="submit">Tematicas</button>
+            </form>
+        </div>
+        <div class="menu-item">
+            <form action="/RankingView">
+                <input type="hidden" name="CourseName" value="{{ CourseName }}">
+         
+         
+                <button  class= "primary-button-right" type="submit">Ranking</button>
+            </form>
+        </div>
+    </div>
 
     <form class="out" action="/sign_off">
         <a class="log_out">
@@ -331,21 +364,6 @@ li{
             <button type="submit" class="primary-button-teacher gen-code">Obtener Id del curso</button>
             </form>
        </div>
-       <div class="menu_teacher_right">
-           <div class="menu-item">
-               <form action="/HomeMenuTeacher">
-                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                   <button  class= "primary-button-right" type="submit">Tematicas</button>
-               </form>
-           </div>
-           <div class="menu-item">
-               <form action="/RankingView">
-                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                   <button  class= "primary-button-right" type="submit">Ranking</button>
-               </form>
-           </div>
-       </div>
-
    </div>
 </div>
 </body>
