--- a/templates/Index.html
+++ b/templates/Index.html
@@ -50,6 +50,7 @@
            color: var(--blue);
            margin-bottom: 12px;
            text-align: center;
+           font-weight: unset;
         }
         .form{
             display: flex;
@@ -97,20 +98,37 @@
             color: var(--blue);
             margin-bottom: 8px;
         }
+        .custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
+        
     </style>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        {% if message %}
-            {% if message.strip() %}
-                <script>
+    {% if message %}
+        {% if message.strip() %}
+            <script>
+                document.addEventListener('DOMContentLoaded', (event) => {
                     Swal.fire({
-                        title: "{{ message }}"
+                        title: "{{ message }}",
+                        showConfirmButton: true,
+                        confirmButtonText: 'OK',
+                        buttonsStyling: false,
+                        customClass: {
+                            confirmButton: 'custom-ok-button'
+                        }
                     });
-                </script>
-            {% endif %}
+                });
+            </script>
         {% endif %}
-
+    {% endif %}
+    
+    
     <div class="login">
         <div class="form_container">
             <img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo">
