--- a/templates/Ranking.html
+++ b/templates/Ranking.html
@@ -26,23 +26,12 @@
         }
         .container-down {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 40% 60%;
     grid-template-rows: auto;
 }
         .full-container{
             display: flex;
             flex-direction: column;
-        }
-        .nav-bar{
-            width: 100vw;
-            height: 80px;
-            background-color: var(--white);
-            border-radius: 12px;
-            margin-bottom: 16px;
-            display: grid;
-            grid-template-columns: 95% 5%;
-            grid-template-rows: auto;
-            align-content: center;
         }
         .menu_teacher_left {
     grid-column-start: 1;
@@ -62,7 +51,6 @@
         .logo-nav {
             width: 150px;
             margin: 0 ;
-            margin-bottom: 12px;
             border-radius: 8px;
             grid-column-start: 1;
 
@@ -73,6 +61,7 @@
            margin-bottom: 16px;
            margin-left: 12px;
            text-align: left;
+           font-weight: unset;
         }
         .label{
             margin-left: 16px;
@@ -162,21 +151,6 @@ li{
             outline: none;
         }
 
-        .primary-button-right {
-            font-size: var(--lg);
-            background-color: var(--white);
-            border-radius: 12px;
-            margin-bottom: 12px;
-            margin-left: 8px;
-            margin-right: 8px;
-            border: none;
-            height: 64px;
-            width: 200px;
-            color: var(--blue);
-            cursor: pointer;
-
-
-        }
         .primary-button-exercise{
             font-size: var(--g);
             background-color: var(--gold);
@@ -222,34 +196,12 @@ li{
         display:flex;
         justify-content: center;
     }
-    .out{
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        margin-right: 12px;
-
-    }
-    .buttons-container{
-        margin-left: 0px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: auto;
-        align-items: flex-start;
-
-
-    }
     .container-little-buttons{
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
     }
-    .gen-code{
-    width: auto;
-    font-size: var(--md);
-}
-
     a{text-decoration: none;
     color: var(--black);
     font-size: var(--lg);}
@@ -314,12 +266,12 @@ li{
     background-color: var(--white);
 }
 .buttons-container{
-        margin-left: 0px;
+        grid-column-start: 3;
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         align-items: center;
         width: auto;
-        align-items: flex-start;
     }
     .title-ranking{
            font-size: var(--lg);
@@ -331,13 +283,90 @@ li{
         display: flex !important;
         flex-direction: row !important;
     }
+    .nav-bar{
+            width: 100vw;
+            height: auto;
+            margin-top: 10px;
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-bottom: 16px;
+            display: grid;
+            grid-template-columns: 30% 30% 30% 10%;
+            grid-template-rows: auto;
+            align-content: center;
+        }
+
+    .out{
+        grid-column-start: 4;
+        display:flex;
+        justify-content: center;
+        align-items: center; 
+        margin-right: 12px;
+        margin-right: 4px;
+        
+    }
+
+.primary-button-right {
+            font-size: var(--lg);
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-left: 8px;
+            margin-right: 8px;
+            border: none;
+            height: 64px;
+            width: 200px;
+            color: var(--blue);
+            cursor: pointer;
+
+
+        }
+        .gen-code {width: auto;
+font-size: var(--md);}
+.custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
     </style>
 </head>
 <body>
+    <<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        {% if message %}
+            {% if message.strip() %}
+                <script>
+                    document.addEventListener('DOMContentLoaded', (event) => {
+                        Swal.fire({
+                            title: "{{ message }}",
+                            showConfirmButton: true,
+                            confirmButtonText: 'OK',
+                            buttonsStyling: false,
+                            customClass: {
+                                confirmButton: 'custom-ok-button'
+                            }
+                        });
+                    });
+                </script>
+            {% endif %}
+        {% endif %}
 <div class="full-container">
-<div class="nav-bar"><img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
-
-
+<div class="nav-bar">
+    <img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
+    <div class="buttons-container">
+        <div class="menu-item">
+            <form action="/HomeMenuTeacher">
+                <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                <button  class= "primary-button-right" type="submit">Tematicas</button>
+            </form>
+        </div>
+        <div class="menu-item">
+            <form action="/RankingView">
+                <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                <button  class= "primary-button-right" type="submit">Ranking</button>
+            </form>
+        </div>
+    </div>
     <form class="out" action="/sign_off">
         <a class="log_out">
             <button type="submit" class="log_out-button">
@@ -392,22 +421,6 @@ li{
             </form>
        </div>
        <div class="menu_teacher_right">
-        <div class="buttons-container">
-            <div class="menu-item">
-                <form action="/HomeMenuTeacher">
-                    <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                    <button  class= "primary-button-right" type="submit">Tematicas</button>
-                </form>
-            </div>
-            <div class="menu-item">
-                <form action="/RankingView">
-                    <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                    <button  class= "primary-button-right" type="submit">Ranking</button>
-                </form>
-            </div>
-        </div>
-           
-
            <div class="ranking-frame">
             <h1 class="title-ranking">Ranking de Estudiantes</h1>
      <table class="table-ranking">
