--- a/templates/editExercise.html
+++ b/templates/editExercise.html
@@ -45,6 +45,7 @@
             color: var(--blue);
             margin-bottom: 12px;
             text-align: center;
+            font-weight: unset;
         }
         .form{
             display: flex;
@@ -96,6 +97,13 @@
             display: grid;
             place-items: center;
         }
+        .custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
     </style>
 </head>
 <body>
