--- a/templates/ExerciseStudent.html
+++ b/templates/ExerciseStudent.html
@@ -25,7 +25,7 @@
         }
         .container-down {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 30% 40% 30%;
     grid-template-rows: auto;
 }
         .full-container{
@@ -40,23 +40,22 @@
             border-radius: 12px;
             margin-bottom: 16px;
             display: grid;
-            grid-template-columns: 95% 5%;
+            grid-template-columns: 30% 30% 30% 10%;
             grid-template-rows: auto;
             align-content: center;
         }
         .menu_teacher_left {
             grid-column-start: 1;
-            background-color: var(--white);
-            display: flex;
-            flex-direction: column;
-            border-radius: 12px;
-            margin-left: 4px;
-            margin-right: 16px;
-            align-items: stretch;
-            width: 250px;
-            max-height: 500px; /* Cambia este valor según tu preferencia */
-            overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
-
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 500px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 500px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
         }
 
         .logo-nav {
@@ -71,6 +70,7 @@
            margin-bottom: 16px;
            margin-left: 12px;
            text-align: left;
+           font-weight: unset;
         }
         .label{
             margin-left: 16px;
@@ -158,31 +158,8 @@ li{
             margin-right: 16px;
             outline: none;
         }
-.container-little-buttons{
-    margin-left: 0px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        width: auto;
-        align-items: flex-start;
-
-}
-
-        .primary-button-right {
-            font-size: 20px;
-            background-color: var(--white);
-            border-radius: 12px;
-            margin-bottom: 12px;
-            margin-left: 8px;
-            margin-right: 8px;
-            border: none;
-            height: 64px;
-            width: 200px;
-            color: var(--blue);
-            cursor: pointer;
 
 
-        }
         .primary-button-teacher{
             font-size: var(--lg);
             background-color: var(--blue);
@@ -213,13 +190,7 @@ li{
         display:flex;
         justify-content: center;
     }
-    .out{
-        display:flex;
-        justify-content: center;
-        align-items: center; 
-        margin-right: 12px;
-        
-    }
+
     .exit{
         width: 48px;
         height: 48px;
@@ -274,7 +245,7 @@ li{
         
 
         textarea {
-      width: 90%;
+      width: 100%;
       height: 600px;
       resize: none;
       border: none;
@@ -284,19 +255,12 @@ li{
       color:var(--black);
       padding: 10px;
       line-height: 1.5;
-      margin: 12px;
       max-height: 600px; /* Cambia este valor según tu preferencia */
       overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
     }
     textarea::placeholder{
         color: var(--black);
     }
-        .container-down {
-    display: grid;
-    grid-template-columns: 40% 60%;
-    grid-template-rows: auto;
-}
-
 
         .subtitle{
            font-size: var(--md);
@@ -315,25 +279,27 @@ li{
         margin-bottom: 12px;
 
         }
-.console {
-    background-color: var(--black);
+        .console {
+     border: 2px solid var(--white); 
+    max-height: 66vh;
+    grid-column-start: 3 ;
+    background-color: var(--blue);
     color: var(--white);
     display: flex;
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
     flex-direction: column;
-    border-radius: 12px;
-    margin-left: 4px;
-    margin-right: 16px;
+    border-radius: 16px;
+    padding: 16px;
     justify-content: start;
-    width: 100%;
-    height: auto;
+    width: auto;
 }
 
-.console pre {
-    text-align: left; /* Corrección: alineación a la izquierda */
-    white-space: pre-wrap;
-}
+
 
         .container-down-buttons{
+            width: 100%;
+            margin-right: 16px;
+            grid-column-start: 2;
             background-color: var(--white);
             padding: 16px;
             border-radius: 16px;
@@ -359,12 +325,84 @@ li{
             background-color: var(--gold);
         }
 
+        .out{
+        grid-column-start: 4;
+        display:flex;
+        justify-content: center;
+        align-items: center; 
+        margin-right: 12px;
+        margin-right: 4px;
+        
+    }
 
+.primary-button-right {
+            font-size: var(--lg);
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-left: 8px;
+            margin-right: 8px;
+            border: none;
+            height: 64px;
+            width: 200px;
+            color: var(--blue);
+            cursor: pointer;
+
+
+        }
+        .buttons-container{
+        grid-column-start: 3;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: auto;
+        }
+        .custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
     </style>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        {% if message %}
+            {% if message.strip() %}
+                <script>
+                    document.addEventListener('DOMContentLoaded', (event) => {
+                        Swal.fire({
+                            title: "{{ message }}",
+                            showConfirmButton: true,
+                            confirmButtonText: 'OK',
+                            buttonsStyling: false,
+                            customClass: {
+                                confirmButton: 'custom-ok-button'
+                            }
+                        });
+                    });
+                </script>
+            {% endif %}
+        {% endif %}
 <body>
     <div class="full-container">
         <div class="nav-bar"><img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
+            <div class="buttons-container">
+                <div class="menu-item">
+                    <form action="/HomeMenuStudent">
+                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                        <input type="hidden" name="email" value="{{ email }}">
+                        <button  class= "primary-button-right" type="submit">Tematicas</button>
+                    </form>
+                </div>
+                <div class="menu-item">
+                    <form action="/RankingViewStudent">
+                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                        <input type="hidden" name="email" value="{{ email }}">
+                        <button  class= "primary-button-right" type="submit">Ranking</button>
+                    </form>
+                </div>
+            </div>
             <form class="out" action="/sign_off">
             <a class="log_out">
                 <button type="submit" class="log_out-button">
@@ -390,23 +428,6 @@ li{
             </div>
 
             <div class="menu_teacher_right">
-                <div class="buttons-container">
-                    <div class="container-little-buttons">
-                        <div class="menu-item">
-                            <form action="/HomeMenuStudent">
-                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <input type="hidden" name="email" value="{{ email }}">
-                                <button  class= "primary-button-right" type="submit">Tematicas</button>
-                            </form>
-                        </div>
-                        <div class="menu-item">
-                            <form action="/RankingViewStudent">
-                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <input type="hidden" name="email" value="{{ email }}">
-                                <button  class= "primary-button-right" type="submit">Ranking</button>
-                            </form>
-                        </div>
-                    </div>
                         <div class="container-down-buttons">
                             <div class="editor-code">
                                 <h2 class="title">{{ exerciseObject[0] }}</h2>
@@ -437,26 +458,19 @@ li{
                                     </div>
                                 </form>
                             </div>
-
+                            </div>
+                     </div>
             </div>
-
-
+            <div class="console">
+                <h2 class="title t-white">Consola :</h2>
+                {% if compiledCode %}
+                    {% for line in compiledCode.split('\n') %}
+                        {{ line }}
+                    {% endfor %}
+                {% endif %}
+            </div>
         </div>
-
-    </div>
-                                  <div class="console">
-                                        <h2 class="title t-white">Consola:</h2>
-                                        {% if compiledCode %}
-                                        <pre >
-                                            {% for line in compiledCode.split('\n') %}
-                                                {{ line }}
-                                            {% endfor %}
-                                        </pre>
-                                        {% endif %}
-
-                                    </div>
-  </div>
-</div>
+        
     </div>
 </body>
 </html>
