--- a/templates/HomeMenu_forActivityStudent.html
+++ b/templates/HomeMenu_forActivityStudent.html
@@ -16,7 +16,6 @@
             --sm: 14px;
             --md: 16px;
             --lg: 24px;
-            --g: 36px;
         }
         body {
             background-color: var(--blue);
@@ -26,42 +25,44 @@
         }
         .container-down {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 40% 60%;
     grid-template-rows: auto;
 }
         .full-container{
             display: flex;
             flex-direction: column;
         }
-        .nav-bar{
-            width: 100vw;
-            height: 80px;
-            background-color: var(--white);
-            border-radius: 12px;
-            margin-bottom: 16px;
-            display: grid;
-            grid-template-columns: 95% 5%;
-            grid-template-rows: auto;
-            align-content: center;
-        }
-       .menu_teacher_left {
-            grid-column-start: 1;
-            background-color: var(--white);
-            display: flex;
-            flex-direction: column;
-            border-radius: 12px;
-            margin-left: 4px;
-            margin-right: 16px;
-            align-items: stretch;
-            width: 80%;
 
+        .menu_teacher_left {
+    grid-column-start: 1;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 500px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 500px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
         }
+    .menu-exercises{
+        background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 800px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 800px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
+
+    }
 
 
         .logo-nav {
             width: 150px;
-            margin: 0 ;
-            margin-bottom: 12px;
             border-radius: 8px;
             grid-column-start: 1;
 
@@ -72,6 +73,7 @@
            margin-bottom: 16px;
            margin-left: 12px;
            text-align: left;
+           font-weight: unset;
         }
         .label{
             margin-left: 16px;
@@ -82,8 +84,8 @@
             margin-top: 16px;
         }
         .input{
-            color: var(--white);
-            background-color: var(--blue);
+            color: var(--black)!important;
+            background-color: var(--gray);
             border-radius: 12px;
             border: none;
             height: 24px;
@@ -94,7 +96,7 @@
             outline: none;
         }
         .input::placeholder{
-            color: var(--white);
+            color: var(--black);
         }
         .primary-button {
             font-size: var(--md);
@@ -108,6 +110,7 @@
             margin-right: 16px;
             cursor: pointer;
         }
+    
 
 
 li{
@@ -116,7 +119,6 @@ li{
     display: flex;
     align-items: center;
     margin-bottom: 16px;
-
 
 }
 .mini-icon{
@@ -140,16 +142,18 @@ li{
     margin-right: 12px;
     justify-self: center;
 }
+
 .menu_teacher_right{
-    margin-left: 12px;
     grid-column-start: 2;
-     display: flex;
-     flex-direction: row;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     width: auto;
+    margin-top: 0;
+    margin-left: 8px;
+    max-width: 60%;
 }
 .input{
-            color: var(--black) !important;
+            color: var(--blue);
             background-color: var(--gray);
             border-radius: 12px;
             border: none;
@@ -161,18 +165,91 @@ li{
             outline: none;
         }
 
-        .primary-button-right {
-            font-size: 20px;
-            background-color: var(--white);
+
+        .primary-button-teacher{
+            font-size: var(--lg);
+            background-color: var(--blue);
             border-radius: 12px;
-            margin-bottom: 12px;
-            margin-left: 8px;
-            margin-right: 8px;
             border: none;
-            height: 64px;
-            width: 200px;
-            color: var(--blue);
+            height: 32px;
+            width: 48px;
+            color: var(--white);
+            margin-left: 16px;
+            margin-right: 16px;
+            margin-bottom: 16px;
             cursor: pointer;
+        }
+        .form-add {
+    display: flex;
+    flex-direction:row;
+        }
+        .log_out{
+            width: 48px;
+            height: 48px;
+            grid-column-start: 2;
+            align-self: center;
+        }
+    
+    .log_out-button{
+        background: var(--white);
+        border: none;
+        display:flex;
+        justify-content: center;
+    }
+
+    .exit{
+        width: 48px;
+        height: 48px;
+        justify-self: center;
+        cursor: pointer;
+    }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.buttons-container{
+    grid-column-start: 3;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: auto;
+
+    }
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+.notification{
+            color: var(--blue);
+            background-color: white;
+            font-size: var(--lg);
+            display: flex;
+            justify-content: center;
+            border-radius: 16px;
+            margin: 12px 12px 0 4px;
+            justify-self: center;
 
 
         }
@@ -190,77 +267,6 @@ li{
             color: var(--blue);
             cursor: pointer;
         }
-        .primary-button-teacher{
-            font-size: var(--lg);
-            background-color: var(--blue);
-            border-radius: 12px;
-            border: none;
-            height: 32px;
-            color: var(--white);
-            margin-left: 16px;
-            margin-right: 16px;
-            margin-bottom: 16px;
-            margin-top: 8px;
-            cursor: pointer;
-
-        }
-        .form-add {
-        justify-self: flex-end;
-    display: flex;
-    flex-direction: column;
-        }
-        .log_out{
-            width: 48px;
-            height: 48px;
-            grid-column-start: 2;
-            align-self: center;
-        }
-
-    .log_out-button{
-        background: var(--white);
-        border: none;
-        display:flex;
-        justify-content: center;
-    }
-    .out{
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        margin-right: 12px;
-
-    }
-    .buttons-container{
-        margin-left: 0px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: auto;
-        align-items: flex-start;
-
-
-    }
-    .container-little-buttons{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
-
-    a{text-decoration: none;
-    color: var(--black);
-    font-size: var(--lg);}
-
-    .menu-exercises{
-        height: auto;
-        width: 100%;
-        margin:0 0 0 8px;
-    }
-    .exit{
-        width: 48px;
-        height: 48px;
-        justify-self: center;
-        cursor: pointer;
-    }
 
                 .notification{
             color: var(--blue);
@@ -274,22 +280,93 @@ li{
 
 
         }
+        .nav-bar{
+            width: 100vw;
+            height: auto;
+            margin-top: 10px;
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-bottom: 16px;
+            display: grid;
+            grid-template-columns: 30% 30% 30% 10%;
+            grid-template-rows: auto;
+            align-content: center;
+        }
+
+    .out{
+        grid-column-start: 4;
+        display:flex;
+        justify-content: center;
+        align-items: center; 
+        margin-right: 12px;
+        margin-right: 4px;
+        
+    }
+
+.primary-button-right {
+            font-size: var(--lg);
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-left: 8px;
+            margin-right: 8px;
+            border: none;
+            height: 64px;
+            width: 200px;
+            color: var(--blue);
+            cursor: pointer;
+
+
+        }
+        .gen-code {width: auto;
+font-size: var(--md);}
+.custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
+    
     </style>
 </head>
 <body>
     <div class="full-container">
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         {% if message %}
             {% if message.strip() %}
                 <script>
-                    Swal.fire({
-                        title: "{{ message }}"
+                    document.addEventListener('DOMContentLoaded', (event) => {
+                        Swal.fire({
+                            title: "{{ message }}",
+                            showConfirmButton: true,
+                            confirmButtonText: 'OK',
+                            buttonsStyling: false,
+                            customClass: {
+                                confirmButton: 'custom-ok-button'
+                            }
+                        });
                     });
                 </script>
             {% endif %}
         {% endif %}
 
         <div class="nav-bar"><img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
+            <div class="buttons-container">
+                <div class="menu-item">
+                    <form action="/HomeMenuStudent">
+                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                        <input type="hidden" name="email" value="{{ email }}">
+                        <button  class= "primary-button-right" type="submit">Tematicas</button>
+                    </form>
+                </div>
+                <div class="menu-item">
+                    <form action="/RankingViewStudent">
+                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                        <input type="hidden" name="email" value="{{ email }}">
+                        <button  class= "primary-button-right" type="submit">Ranking</button>
+                    </form>
+                </div>
+            </div>
             <form class="out" action="/sign_off">
             <a class="log_out">
                 <button type="submit" class="log_out-button">
@@ -315,27 +392,11 @@ li{
                 </ul>
             </div>
 
-            <div class="menu_teacher_right">
-                <div class="buttons-container">
-                    <div class="menu_teacher_right">
-                        <div class="menu-item">
-                            <form action="/HomeMenuStudent">
-                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <input type="hidden" name="email" value="{{ email }}">
-                                <button  class= "primary-button-right" type="submit">Tematicas</button>
-                            </form>
-                        </div>
-                        <div class="menu-item">
-                            <form action="/RankingViewStudent">
-                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <input type="hidden" name="email" value="{{ email }}">
-                                <button  class= "primary-button-right" type="submit">Ranking</button>
-                            </form>
-                        </div>
-                    </div>
+
+                    
 
 
-                    <div class="menu_teacher_left menu-exercises">
+                    <div class="menu_teacher_right menu-exercises">
                         <ul>
                             {% if not Exercises %}
                                 <p>No hay ejercicios en esta tematica (❁´◡`❁)</p>
@@ -359,10 +420,10 @@ li{
                     </div>
 
 
-                </div>
+                
 
 
-            </div>
+        
         </div>
 
 
