--- a/templates/HomeMenu_forActivityTeacher.html
+++ b/templates/HomeMenu_forActivityTeacher.html
@@ -32,30 +32,34 @@
             display: flex;
             flex-direction: column;
         }
-        .nav-bar{
-            width: 100vw;
-            height: auto;
-            margin-top: 10px;
-            background-color: var(--white);
-            border-radius: 12px;
-            margin-bottom: 16px;
-            display: grid;
-            grid-template-columns: 95% 5%;
-            grid-template-rows: auto;
-            align-content: center;
-        }
-        .menu_teacher_left {
-            grid-column-start: 1;
-            background-color: var(--white);
-            display: flex;
-            flex-direction: column;
-            border-radius: 12px;
-            margin-left: 4px;
-            margin-right: 16px;
-            align-items: stretch;
-            width: 50%;
 
+        .menu_teacher_left {
+    grid-column-start: 1;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 500px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 500px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
         }
+    .menu-exercises{
+        background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 800px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 800px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
+
+    }
+
 
         .logo-nav {
             width: 150px;
@@ -69,6 +73,7 @@
            margin-bottom: 16px;
            margin-left: 12px;
            text-align: left;
+           font-weight: unset;
         }
         .label{
             margin-left: 16px;
@@ -140,10 +145,13 @@ li{
 
 .menu_teacher_right{
     grid-column-start: 2;
-     display: flex;
-     flex-direction: column;
-    justify-content: center;
-    width: auto;}
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    margin-top: 0;
+    margin-left: 8px;
+    max-width: 60%;
+}
 .input{
             color: var(--blue);
             background-color: var(--gray);
@@ -157,21 +165,7 @@ li{
             outline: none;
         }
 
-        .primary-button-right {
-            font-size: var(--lg);
-            background-color: var(--white);
-            border-radius: 12px;
-            margin-bottom: 12px;
-            margin-left: 8px;
-            margin-right: 8px;
-            border: none;
-            height: 64px;
-            width: 200px;
-            color: var(--blue);
-            cursor: pointer;
 
-
-        }
         .primary-button-teacher{
             font-size: var(--lg);
             background-color: var(--blue);
@@ -202,13 +196,7 @@ li{
         display:flex;
         justify-content: center;
     }
-    .out{
-        display:flex;
-        justify-content: center;
-        align-items: center; 
-        margin-right: 12px;
-        
-    }
+
     .exit{
         width: 48px;
         height: 48px;
@@ -238,13 +226,12 @@ li{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .buttons-container{
-        margin-left: 0px;
+    grid-column-start: 3;
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         align-items: center;
         width: auto;
-        align-items: flex-start;
-
 
     }
 .close {
@@ -266,9 +253,6 @@ li{
 
 
         }
-.gen-code{
-    width: auto;
-}
         .primary-button-exercise{
             font-size: var(--g);
             background-color: var(--gold);
@@ -296,24 +280,91 @@ li{
 
 
         }
+        .nav-bar{
+            width: 100vw;
+            height: auto;
+            margin-top: 10px;
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-bottom: 16px;
+            display: grid;
+            grid-template-columns: 30% 30% 30% 10%;
+            grid-template-rows: auto;
+            align-content: center;
+        }
 
+    .out{
+        grid-column-start: 4;
+        display:flex;
+        justify-content: center;
+        align-items: center; 
+        margin-right: 12px;
+        margin-right: 4px;
+        
+    }
+
+.primary-button-right {
+            font-size: var(--lg);
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-left: 8px;
+            margin-right: 8px;
+            border: none;
+            height: 64px;
+            width: 200px;
+            color: var(--blue);
+            cursor: pointer;
+
+
+        }
+        .gen-code {width: auto;
+font-size: var(--md);}
+.custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
     
     </style>
 </head>
 <body>
 
     <div class="full-container">
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         {% if message %}
             {% if message.strip() %}
                 <script>
-                    Swal.fire({
-                        title: "{{ message }}"
+                    document.addEventListener('DOMContentLoaded', (event) => {
+                        Swal.fire({
+                            title: "{{ message }}",
+                            showConfirmButton: true,
+                            confirmButtonText: 'OK',
+                            buttonsStyling: false,
+                            customClass: {
+                                confirmButton: 'custom-ok-button'
+                            }
+                        });
                     });
                 </script>
             {% endif %}
         {% endif %}
         <div class="nav-bar"><img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
+            <div class="buttons-container">
+                <div class="menu-item">
+                    <form action="/HomeMenuTeacher">
+                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                        <button  class= "primary-button-right" type="submit">Tematicas</button>
+                    </form>
+                </div>
+                <div class="menu-item">
+                    <form action="/RankingView">
+                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                        <button  class= "primary-button-right" type="submit">Ranking</button>
+                    </form>
+                </div>
+            </div>
             <form class="out" action="/sign_off">
             <a class="log_out">
                 <button type="submit" class="log_out-button">
@@ -353,24 +404,7 @@ li{
             </div>
 
             <div class="menu_teacher_right">
-                
-                    <div class="buttons-container">
-                        <div class="menu-item">
-                            <form action="/HomeMenuTeacher">
-                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <button  class= "primary-button-right" type="submit">Tematicas</button>
-                            </form>
-                        </div>
-                        <div class="menu-item">
-                            <form action="/RankingView">
-                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <button  class= "primary-button-right" type="submit">Ranking</button>
-                            </form>
-                        </div>
-                    </div>
-                    
-                    
-                    <div class="menu_teacher_left">
+                    <div class="menu-exercises">
                         <h2 class = "title">Ejercicios : </h2>
                         <ul>
                             {% if not Exercises %}
