--- a/templates/SelectCourseView.html
+++ b/templates/SelectCourseView.html
@@ -52,6 +52,7 @@
            margin-bottom: 16px;
            margin-left: 12px;
            text-align: left;
+           font-weight: unset;
         }
         .label{
             margin-left: 16px;
@@ -136,21 +137,37 @@ li{
     a{text-decoration: none;
     color: var(--black);
     font-size: var(--lg);}
-
+    .gen-code {width: auto;
+font-size: var(--md);}
+.custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
 
     </style>
 </head>
 <body>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        {% if message %}
-            {% if message.strip() %}
-                <script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    {% if message %}
+        {% if message.strip() %}
+            <script>
+                document.addEventListener('DOMContentLoaded', (event) => {
                     Swal.fire({
-                        title: "{{ message }}"
+                        title: "{{ message }}",
+                        showConfirmButton: true,
+                        confirmButtonText: 'OK',
+                        buttonsStyling: false,
+                        customClass: {
+                            confirmButton: 'custom-ok-button'
+                        }
                     });
-                </script>
-            {% endif %}
+                });
+            </script>
         {% endif %}
+    {% endif %}
     <div class="menu_teacher_left">
         <img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo">
         <h1 class="title">Cursos</h1>
