--- a/templates/SelectStudentQualify.html
+++ b/templates/SelectStudentQualify.html
@@ -40,20 +40,22 @@
             border-radius: 12px;
             margin-bottom: 16px;
             display: grid;
-            grid-template-columns: 95% 5%;
+            grid-template-columns: 30% 30% 30% 10%;
             grid-template-rows: auto;
             align-content: center;
         }
         .menu_teacher_left {
-            grid-column-start: 1;
-            background-color: var(--white);
-            display: flex;
-            flex-direction: column;
-            border-radius: 12px;
-            margin-left: 4px;
-            margin-right: 16px;
-            align-items: stretch;
-            width: 50%;
+    grid-column-start: 1;
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    margin-left: 0px;
+    max-width: 500px;
+    margin-right: 16px;
+    align-items: stretch;
+    max-height: 500px; /* Cambia este valor según tu preferencia */
+    overflow-y: auto; /* Agrega una barra de desplazamiento si es necesario */
 
         }
 
@@ -69,6 +71,7 @@
            margin-bottom: 16px;
            margin-left: 12px;
            text-align: left;
+           font-weight: unset;
         }
         .label{
             margin-left: 16px;
@@ -142,7 +145,6 @@ li{
     grid-column-start: 2;
      display: flex;
      flex-direction: column;
-    justify-content: center;
     width: auto;}
 .input{
             color: var(--blue);
@@ -161,7 +163,6 @@ li{
             font-size: var(--lg);
             background-color: var(--white);
             border-radius: 12px;
-            margin-bottom: 12px;
             margin-left: 8px;
             margin-right: 8px;
             border: none;
@@ -169,8 +170,6 @@ li{
             width: 200px;
             color: var(--blue);
             cursor: pointer;
-
-
         }
         .primary-button-teacher{
             font-size: var(--lg);
@@ -203,11 +202,12 @@ li{
         justify-content: center;
     }
     .out{
+        grid-column-start: 4;
         display:flex;
         justify-content: center;
         align-items: center; 
         margin-right: 12px;
-        
+        margin-right: 4px;
     }
     .exit{
         width: 48px;
@@ -266,9 +266,7 @@ li{
 
 
         }
-.gen-code{
-    width: auto;
-}
+
         .primary-button-exercise{
             font-size: var(--g);
             background-color: var(--gold);
@@ -297,27 +295,60 @@ li{
 
         }
         .container-little-buttons{
-            display: flex;
-            flex-direction: row;
+        grid-column-start: 3;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: auto;
+
         }
 
-
+        .custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
     </style>
 </head>
 <body>
 
     <div class="full-container">
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         {% if message %}
             {% if message.strip() %}
                 <script>
-                    Swal.fire({
-                        title: "{{ message }}"
+                    document.addEventListener('DOMContentLoaded', (event) => {
+                        Swal.fire({
+                            title: "{{ message }}",
+                            showConfirmButton: true,
+                            confirmButtonText: 'OK',
+                            buttonsStyling: false,
+                            customClass: {
+                                confirmButton: 'custom-ok-button'
+                            }
+                        });
                     });
                 </script>
             {% endif %}
         {% endif %}
         <div class="nav-bar"><img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
+            <div class="container-little-buttons">
+                <div class="menu-item">
+                    <form action="/HomeMenuTeacher">
+                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                        <button  class= "primary-button-right" type="submit">Tematicas</button>
+                    </form>
+                </div>
+                <div class="menu-item">
+                    <form action="/RankingView">
+                        <input type="hidden" name="CourseName" value="{{ CourseName }}">
+                        <button  class= "primary-button-right" type="submit">Ranking</button>
+                    </form>
+                </div>
+            </div>
             <form class="out" action="/sign_off">
             <a class="log_out">
                 <button type="submit" class="log_out-button">
@@ -356,20 +387,6 @@ li{
 
             <div class="menu_teacher_right">
                 <div class="buttons-container">
-                    <div class="container-little-buttons">
-                        <div class="menu-item">
-                            <form action="/HomeMenuTeacher">
-                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <button  class= "primary-button-right" type="submit">Tematicas</button>
-                            </form>
-                        </div>
-                        <div class="menu-item">
-                            <form action="/RankingView">
-                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <button  class= "primary-button-right" type="submit">Ranking</button>
-                            </form>
-                        </div>
-                    </div>
                 </div>
 
                     <div class="menu_teacher_left menu-exercises">
