--- a/templates/StudentRegistration.html
+++ b/templates/StudentRegistration.html
@@ -45,6 +45,7 @@
            color: var(--blue);
            margin-bottom: 12px;
            text-align: center;
+           font-weight: unset;
         }
         .form{
             display: flex;
@@ -102,19 +103,34 @@
             margin: 12px 12px 0 4px;
             justify-self: center;
         }
+        .custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
     </style>
 </head>
 <body>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        {% if messageCourse %}
-            {% if messageCourse.strip() %}
-                <script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    {% if message %}
+        {% if message.strip() %}
+            <script>
+                document.addEventListener('DOMContentLoaded', (event) => {
                     Swal.fire({
-                        title: "{{ messageCourse }}"
+                        title: "{{ message }}",
+                        showConfirmButton: true,
+                        confirmButtonText: 'OK',
+                        buttonsStyling: false,
+                        customClass: {
+                            confirmButton: 'custom-ok-button'
+                        }
                     });
-                </script>
-            {% endif %}
+                });
+            </script>
         {% endif %}
+    {% endif %}
     <div class = "register">
         <div class = "form_container"> 
             <h1 class="title">Registro</h1>
