--- a/templates/editCourse.html
+++ b/templates/editCourse.html
@@ -48,6 +48,7 @@
            color: var(--blue);
            margin-bottom: 12px;
            text-align: center;
+           font-weight: unset;
         }
         .a{
             display: flex;
@@ -81,6 +82,13 @@
         .title {
             margin-bottom:20px
         }
+        .custom-ok-button {
+        background-color: var(--blue);
+        color: var(--white);
+        font-family: 'Space Grotesk', sans-serif; /* Add your preferred font-family */
+        font-size: var(--lg);
+        border-radius: 12px;
+    }
 
 </style>
 </head>
